html file is updated

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Service</a></li>
-          <li><a href="#">Dpwnload</a></li>
+          <li><a href="#">Download</a></li>
         </ul>
       </div>
     </div>
-    <script src="script.js"></script>r
+    <script src="script.js"></script>
   </body>
 </html>
