--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </a>
-      <div class="navbar-links">
+      <div class="navbar-links active">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
